  * Take architecture into account in virtual packages on remove and
    configure dpkg actions. Closes: #683411
  * Update update-alternatives --query format and examples in man page to
    match the implementation.
  * Add two missing 3rd person ‘s’ in dpkg-gensymbols(1). Closes: #689863
    Thanks to Paul Menzel <pm.debian@googlemail.com>.

  [ Updated programs translations ]
  * Catalan (Guillem Jover).
  * Czech (Miroslav Kure).
  * Danish (Joe Dalton).
  * French (Christian Perrier).
  * German (Sven Joachim).
  * Italian (Milo Casagrande).
  * Japanese (Kenshi Muto).
  * Polish (Michał Kułach). Closes: #690449
  * Portuguese (Miguel Figueiredo). Closes: #682582, #690431
  * Russian (Yuri Kozlov). Closes: #688050, #690415
  * Slovak (Ivan Masár). Closes: #690426
  * Swedish (Peter Krefting).
  * Thai (Theppitak Karoonboonyanan). Closes: #690678
  * Traditional Chinese (imacat). Closes: #687002

  [ Updated scripts translations ]
  * Polish (Michał Kułach). Closes: #683104
  * Spanish (Omar Campagne). Closes: #685297

  [ Updated dselect translations ]
  * Basque (Iñaki Larrañaga Murgoitio). Closes: #686421
  * Czech (Miroslav Kure).
  * Danish (Joe Dalton). Closes: #689820
  * Polish (Michał Kułach).

  [ Updated man page translations ]
  * French (Thomas Vincent, Sylvestre Ledru, Christian Perrier).
    Closes: #682978, #683221
  * German (Helge Kreutzmann).
  * Japanese (Hideki Yamane). Closes: #685103
  * Polish (Michał Kułach).
  * Spanish (Omar Campagne, Guillem Jover). Closes: #683514
  * Swedish (Peter Krefting).

 -- Guillem Jover <guillem@debian.org>  Sat, 21 Jul 2012 02:56:48 +0200

dpkg (1.16.8) unstable; urgency=low

  [ Updated programs translations ]
  * Esperanto (Felipe Castro).
  * French (Christian Perrier).
  * Polish (Michał Kułach). Closes: #680561
  * Russian (Yuri Kozlov). Closes: #677850, #680411
  * Slovak (Ivan Masár).
  * Spanish (Javier Fernández-Sanguino)

  [ Updated man page translations ]
  * French (Christian Perrier).
