@@ -53,6 +53,9 @@ dpkg (1.16.9) UNRELEASED; urgency=low
     match the implementation.
   * Add two missing 3rd person ‘s’ in dpkg-gensymbols(1). Closes: #689863
     Thanks to Paul Menzel <pm.debian@googlemail.com>.
+  * Fix regression on old-style binNMUs for packages that specify an
+    explicit binary version to dpkg-gencontrol, by always fixing up the
+    source version. Closes: #690823
 
   [ Updated programs translations ]
   * Catalan (Guillem Jover).
